client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@media print{
  :host {
    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
  }
  app-root {
    display: block;
    width: 100%;
    height: 100%;
  }
}

:host {
  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
}

.header-container {
  display: flex;
  flex-flow: row;
  flex-wrap: wrap;
  padding: 22px;
}
.header-container> * {
  flex: 1 1 350px;
}

.map-container {
  width: 100%;
  max-width: 533px;
  min-height: 400px !important;
}

.map-container-mobile {
  width: 100%;
  min-height: 200px !important;
}

@media screen and (max-width: 808px) {
  .map-container {
    max-width: 808px !important;
  }
}

.incident-details {
  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
  padding: 24px;
  .header {
    text-align: right;
    display: flex;
    flex-flow: row-reverse;
    .button {
      cursor: pointer;
    }
  }
  .title-bar {
    .title {
      font-size: 1.6rem;
      color: #003366;
      display: flex;
      flex-direction: row;
      .fire-icon-container {
        width: 24px;
        height: 24px;
        border-radius: 50%;
        margin-right: 8px;
        margin-left: 8px;
        .fire-icon{
          width:14.4px;
          height:18px;
          color: #FFFFFF;
        }
      }
    }
    .subtitle {
      text-decoration: underline;
      color: #1a5a96;
      font-size: 1rem;
    }
  }
  .nav-button {
    padding-top: 7px;
  }
  .info-panel {
    padding-top: 7px;
    font-size: 1rem;
    .label {
      color: #036;
    }
  }
  .divider {
    border-bottom: 1px lightgray solid;
    padding-top: 7px;
    padding-bottom: 7px;
  }
  .gutter {
    padding-top: 7px;
  }
  .icon-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    .resource-icon {
      color: #003366;
      font-size: 1rem;
      padding-left: 7px;
      padding-right: 7px;
      text-align: center;
      .image-size {
        width: 50px;
        height: 50px;
      }
      .image-label {
        max-width: 100px;
      }
    }
  }
  .evac-list {
    display: flex;
    flex-direction: row;
    color: black;
    padding-top: 7px;
    .label {
      text-decoration: underline;
      cursor: pointer;
    }
    .issued-by {
      padding: 4px;
      font-size: 12px;
      font-style: italic;
      color: gray;
      text-decoration: none;
    }
  }
  .alert {
    color: #dfa512 !important;
  }
  .order {
    color: #b42e45 !important;
  }
  h4 {
    color: #003366;
  }
  .header-content{
    padding-top: 16px;
    color:#6e6e6e;
    font-size: 14px;
    display: flex;
    justify-content: space-between;
    // .item{
    //   margin-right: 26px;
    // }

    // .item:last-child {
    //   margin-right: 0;
    // }
    .divider {
      border-bottom: 1px lightgray solid;
      padding-top: 7px;
      padding-bottom: 7px;
    }
    .mobile-button{
      border-radius: 5px;
      border: 1px solid #6e6e6e;
      background-color: #fdfdfd;
      box-sizing: border-box;
      align-items: center;
      justify-content: center;
      width: 160px;
    }
  }
}

.mobile-label {
  color: #6e6e6e;
  font-size: 14px;
}

@media (max-width: 768px) {
  .header-container {
    padding: 0px !important;
    .mobile-header{
      height: 50px;
      display: flex;
      justify-content: space-between;
      padding:0 24px;
      align-items: center;
      position: sticky !important;
      top:0;
      background-color: white;
      z-index:9999;
    }
  }
  .title{
    color:black !important
  }
}

:host ::ng-deep .mat-tab-header {
  top: -1px;
  z-index: 1000;
  position: sticky;
  position: -webkit-sticky; /* macOS/iOS Safari */
  background-color: #f3f6f9;
  @media (max-width: 768px) {
    background-color: white !important;
    top:50px;
  }
}

